[package]
name = "snowflake"
version = "0.1.5"
authors = ["xugy <xugy@xugy.org>"]
repository = "https://github.com/Aura-Co/snowflake.git"
homepage = "https://github.com/Aura-Co/snowflake.git"
license = "MIT"
readme = "README.md"
documentation = "https://github.com/Aura-Co/snowflake/blob/master/README.md"
description = "The rust-lang implementation of Twitter's id generator algorithm snowflake, it thread safety | Twitter 的id生成器算法snowflake的rust-lang 实现"

[dependencies]
time = "0.1.39"
#error-chain = "0.11.0"

